@@ -92,6 +92,7 @@ S3method(lda, matrix)
 S3method(loglm1, data.frame)
 S3method(loglm1, default)
 S3method(loglm1, xtabs)
+S3method(logLik, fitdistr)
 S3method(logLik, negbin)
 S3method(logtrans, default)
 S3method(logtrans, formula)
