@@ -1,2 +1,0 @@
-These are the scripts for the *fourth* edition.
-See the parallel directory scripts3 for the scripts for the third edition.
