@@ -30,6 +30,7 @@
 #include <limits.h> */
 
 #include <R.h>
+#include <R_ext/Linpack.h>
 #include <R_ext/Applic.h>	/* for the QR	  routines */
 #include <R_ext/Utils.h>	/* for the *sort() routines */
 #define BIG DBL_MAX
